--- a/karate-division-calculator/public/index.html
+++ b/karate-division-calculator/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Karate Scoring</title>
+    <title>Karate Division Calculator</title>
   </head>
   <body>
     <div id="root"></div>
