--- a/index.html
+++ b/index.html
@@ -1,96 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karate Scorer Applications</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      line-height: 1.6;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-      color: #333;
-    }
-    .app-cards {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-    .app-card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 20px;
-      width: 300px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
-    }
-    .app-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
-    }
-    h2 {
-      margin-top: 0;
-      color: #1a73e8;
-    }
-    a.app-link {
-      display: inline-block;
-      margin-top: 15px;
-      background-color: #1a73e8;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a.app-link:hover {
-      background-color: #0d5bba;
-    }
-    .app-description {
-      color: #555;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Martial Arts Tools</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            color: #333;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+            background-color: #f5f5f5;
+        }
+        header {
+            text-align: center;
+            padding: 40px 0;
+            background-color: #fff;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+        .subtitle {
+            color: #7f8c8d;
+            font-size: 1.2rem;
+        }
+        .app-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+            margin: 40px 0;
+        }
+        .app-card {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            overflow: hidden;
+            width: 340px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .app-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+        }
+        .app-card-header {
+            background-color: #3498db;
+            color: white;
+            padding: 15px 20px;
+        }
+        .app-card-header h2 {
+            margin: 0;
+            font-size: 1.4rem;
+        }
+        .app-card-body {
+            padding: 20px;
+        }
+        .app-card-body p {
+            margin-bottom: 20px;
+            color: #555;
+        }
+        .btn {
+            display: inline-block;
+            background-color: #3498db;
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            border-radius: 4px;
+            font-weight: 500;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #2980b9;
+        }
+        footer {
+            text-align: center;
+            margin: 40px 0 20px;
+            color: #7f8c8d;
+            font-size: 0.9rem;
+        }
+        @media (max-width: 768px) {
+            .app-card {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-  <h1>Karate Tournament Management Suite</h1>
-  
-  <div class="app-cards">
-    <div class="app-card">
-      <h2>Ref Scoresheet</h2>
-      <p class="app-description">
-        Track competitor placements and assign scores during tournament divisions.
-        Designed for referees to manage rankings and calculate scores.
-      </p>
-      <a href="./karate-ref-scoresheet/" class="app-link">Launch App</a>
+    <header>
+        <h1>Martial Arts Tools</h1>
+        <p class="subtitle">A collection of web applications for karate tournament management</p>
+    </header>
+
+    <div class="app-container">
+        <div class="app-card">
+            <div class="app-card-header">
+                <h2>Karate Division Calculator</h2>
+            </div>
+            <div class="app-card-body">
+                <p>Calculate and aggregate scores for karate tournament competitors, handle score discrepancies, and determine final placements.</p>
+                <a href="./karate-division-calculator/" class="btn">Open Application</a>
+            </div>
+        </div>
+
+        <div class="app-card">
+            <div class="app-card-header">
+                <h2>Karate Ref Scoresheet</h2>
+            </div>
+            <div class="app-card-body">
+                <p>Track competitors, assign rankings, and calculate scores based on rankings during tournament divisions.</p>
+                <a href="./karate-ref-scoresheet/" class="btn">Open Application</a>
+            </div>
+        </div>
+
+        <div class="app-card">
+            <div class="app-card-header">
+                <h2>Karate Tournament Bracket</h2>
+            </div>
+            <div class="app-card-body">
+                <p>Create and visualize single elimination tournament brackets with automatic bye distribution and printable output.</p>
+                <a href="./karate-tournament-bracket/" class="btn">Open Application</a>
+            </div>
+        </div>
     </div>
-    
-    <div class="app-card">
-      <h2>Division Calculator</h2>
-      <p class="app-description">
-        Aggregate judge scores, detect scoring discrepancies, and calculate final
-        placements with tie-breaking logic.
-      </p>
-      <a href="./karate-division-calculator/" class="app-link">Launch App</a>
-    </div>
-    
-    <div class="app-card">
-      <h2>Tournament Bracket</h2>
-      <p class="app-description">
-        Generate printable tournament brackets with auto-calculated byes.
-        Create single elimination brackets for any number of competitors.
-      </p>
-      <a href="./karate-tournament-bracket/" class="app-link">Launch App</a>
-    </div>
-  </div>
-  
-  <footer style="margin-top: 50px; text-align: center; color: #666; font-size: 0.9em;">
-    &copy; 2025 Karate Tournament Management Suite by herrkutt
-  </footer>
+
+    <footer>
+        <p>Created by drehelm | <a href="https://github.com/drehelm/Martial-Arts-Tools">GitHub Repository</a></p>
+    </footer>
 </body>
 </html>
